[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HeBz"
version = "0.0.7"
description = "My package"
authors = [{ name="Sutirtha Paul", email="spaul19@vols.utk.edu"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
