[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HeBz"
version = "0.0.7"
description = "My package"
authors = [{ name="Sutirtha Paul", email="spaul19@vols.utk.edu"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
]

# Discover packages inside the repo root
[tool.setuptools.packages.find]
where = ["."]

# Include non-Python data files inside the HeBz/ directory
[tool.setuptools.package-data]
HeBz = ["*"]             

# Ensure data inside the package is included
[tool.setuptools]
include-package-data = true

